2004-03-26  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c: (gantt_model_get_column_type),
	(gantt_model_get_value):
	* src/planner-gantt-model.h:
	* src/planner-gantt-view.c: (gantt_view_create_widget):
	* src/planner-task-tree.c: (task_tree_id_data_func),
	(task_tree_add_column), (planner_task_tree_new):
	* src/planner-task-tree.h:
	* src/planner-task-view.c: (get_widget): Add WBS column.

2004-03-24  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-22  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* src/planner-ttable-print.c: Removed the buggy resource usage
	view print
	* src/planner-ttable-row.c: Disable the task move (doesn't respond
	to button press)

2004-03-18  Mikael Hallendal  <micke@imendio.com>

	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/mrproject2html.xsl:
	- s/MrProject/Planner/g, solves #137571

2004-03-17  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-dialog.c: Cleaned code commented.
	* src/planner-resource-dialog.c: Some support for undo stuff.
	We need to find how to undo keystroke dialogs entries.
	If the resource is removed, the dialog is closed.
	* src/planner-task-dialog.c: If task removed, close the dialog.

2004-03-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c: Fix bug #134969, to fix printing
	problems with gantt chart. Patch from Heath Wilkinson again.
	
	* planner.spec.in (BuildRequires): Bring a bit more up to date.

	* configure.in: Up libxml and libxslt requirement, to fix bug
	#136752. Thanks to Jared Jones.

2004-03-15  Richard Hult  <richard@imendio.com>

	* data/glade/task-dialog.glade: Use better step/page sizes. Fixes
	bug #132342, idea by Lincoln Phipps.

	* src/planner-gantt-row.c: (gantt_row_event): Fix indentation and
	don't mix declarations and assignments.

2004-03-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (planner_task_tree_link_tasks): Hm, I